Response to feedback - Second Draft

--- a/Treehouse-Tech-Degree-Unit-3/index.html
+++ b/Treehouse-Tech-Degree-Unit-3/index.html
@@ -167,7 +167,7 @@
         </div>                  
 
       </fieldset>        
-        
+        <div id="payment-message"></div>
       <button type="submit">Register</button>
       
     </form>
