Latest submission for review!

--- a/Treehouse-Tech-Degree-Unit-3/index.html
+++ b/Treehouse-Tech-Degree-Unit-3/index.html
@@ -32,8 +32,10 @@
           <option value="back-end developer">Back End Developer</option>
           <option value="designer">Designer</option>          
           <option value="student">Student</option>
-          <option value="other">Other</option>  
+          <option value="other">Other</option> 
         </select>
+          <label id="other-specify-label" for="other-specify-box">If "Other", please specify below!</label> 
+          <input id="other-specify-box" type="text" name="other">
         </section>           
       </fieldset>
       
